fix "contents jump when mobile keyboard pop"

--- a/dogprofile/ui/ui.css
+++ b/dogprofile/ui/ui.css
@@ -97,10 +97,10 @@ body {
 }
 
 .profile-avatar {
+  position: relative;
 	display: block;
-	width: 14.65vh;
-	height: 14.65vh;
-	margin-top: 5vh;
+	width: 34.3%;
+	margin-top: 4.64%;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 50%;
@@ -234,7 +234,7 @@ body {
 .profile-upload-grid .upload-btn {
   font-weight: Regular;
   width: 100%;
-  height: 5vh;
+  height: 4.6%;
   border-radius: 5.3vw;
   box-shadow: 0vw 0.4vw 1.6vw #00000033;
 }
@@ -249,53 +249,55 @@ body {
 }
 
 .upload-pic label {
-	font-size: 2vh;
+	font-size: 80%;
 }
 
 p.avatar-title {
 	display: inline-block;
   width: 100%;
-  height: 27px;
+  height: 3.58%;
   padding-left: 5.06vw;
   font-family: Segoe UI;
   font-weight: Bold;
-  font-size: 20px;
+  font-size: 100%;
   text-align: left;
-	margin-top: 3vh;
-	margin-bottom: 1vh;
+	margin-top: 3.23%;
+	margin-bottom: 1.07%;
 }
 #avatar-human-grid {
   width: 100%;
-  height: 24.74vh;
+  height: 26.68%;
   left: 0%;
   display: grid;
   grid-template-columns: repeat(3,25.06vw);
-  grid-template-rows: 11.57vh 11.57vh;
+  grid-template-rows: 40% 40%;
   justify-content: space-evenly;
   align-content: space-between;
 }
 
 #avatar-dog-grid {
     width: 100%;
-    height: 11.57vh;
+    height: 12.47%;
     left: 0%;
     display: grid;
     grid-template-columns: repeat(3,25.06vw);
-    grid-template-rows: 11.57vh;
+    grid-template-rows: 100%;
     justify-content: space-evenly;
 }
 
 img.avatar-choose {
-    position: absolute;
-    max-height: 11.57vh;
-    height: 11.57vh;
+    max-height: 100%;
+    height: 100%;
     border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #edit-name {
     display: block;
     width: 80%;
-    height: 2.46vh;
+    height: 2..65%;
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
@@ -305,15 +307,15 @@ img.avatar-choose {
 
 #save-btn {
   position: absolute;
-  width: 10.66vw;
-  top: 4.8vh;
+  height: 5.31%;
+  top: 5.17%;
   right: 2.66vw;
 }
 
 #cancel-btn {
   position: absolute;
-  width: 10.66vw;
-  top: 4.8vh;
+  height: 5.31%;
+  top: 5.17%;
   left: 2.66vw;
 }
 
